--- a/test/src/test/java/uks/debuggen/studyright/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/studyright/classModel.yaml
@@ -66,10 +66,12 @@ pre.shouldHave(text(\"- 12_00:\"));
 open(\"http://localhost:42400\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_00:\"));
-// check data note s01
+// check data note 12:03:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- s01:\"));
-pre.shouldHave(text(\"motivation: 77\"));
+pre.shouldHave(text(\"- s03:\"));
+pre.shouldHave(text(\"room: modeling\"));
+pre.shouldHave(text(\"previousStop: s02\"));
+pre.shouldHave(text(\"motivation: 12\"));
 
 System.out.println();
 "
