--- a/test/src/main/java/uks/debuggen/studyright/StudyRight/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/studyright/StudyRight/classModel.yaml
@@ -21,7 +21,7 @@
   attributes: 	studyRightService_history 	studyRightService_port 	studyRightService_spark 	studyRightService_model 	studyRightService_handlerMap
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.studyright.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.studyright.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
-  methods: 	studyRightService_start 	studyRightService_getHello 	studyRightService_subscribeAndLoadOldEvents 	studyRightService_apply 	studyRightService_getPage 	studyRightService_getDemoPage 	studyRightService_handleRoomsLoaded 	studyRightService_handleTourStarted 	studyRightService_initEventHandlerMap 	studyRightService_ignoreEvent 	studyRightService_publish 	studyRightService_postApply
+  methods: 	studyRightService_start 	studyRightService_getHello 	studyRightService_subscribeAndLoadOldEvents 	studyRightService_apply 	studyRightService_getPage 	studyRightService_getDemoPage 	studyRightService_handleRoomsLoaded 	studyRightService_handleDemoRoomsLoaded 	studyRightService_handleTourStarted 	studyRightService_handleDemoTourStarted 	studyRightService_handleRoomSelected 	studyRightService_handleDemoRoomSelected 	studyRightService_handleUniversityEdited 	studyRightService_handleRoomEdited 	studyRightService_handleStopEdited 	studyRightService_initEventHandlerMap 	studyRightService_ignoreEvent 	studyRightService_publish 	studyRightService_postApply 	studyRightService_stripBrackets
   model: 	c
   modified: 	false
   name: 	StudyRightService
@@ -44,11 +44,12 @@
   roles: 	room_uni 	room_doors
 
 - stop: 	org.fulib.classmodel.Clazz
-  attributes: 	stop_id 	stop_motivation
+  attributes: 	stop_id 	stop_motivation 	stop_room
   model: 	c
   modified: 	false
   name: 	Stop
   propertyStyle: 	Bean
+  roles: 	stop_previousStop 	stop_nextStops
 
 - c1: 	org.fulib.classmodel.CollectionType
   implClass: 	class java.util.ArrayList
@@ -72,7 +73,8 @@
   clazz: 	studyRightModel
   declaration: 	"public University getOrCreateUniversity(String id)"
   id: 	StudyRightModel_getOrCreateUniversity
-  methodBody: 	"return (University) modelMap.computeIfAbsent(id, k -> new University().setId(k));
+  methodBody: 	"if (id == null) return null;
+return (University) modelMap.computeIfAbsent(id, k -> new University().setId(k));
 "
   modified: 	false
   modifiers: 	public
@@ -86,7 +88,8 @@
   clazz: 	studyRightModel
   declaration: 	"public Room getOrCreateRoom(String id)"
   id: 	StudyRightModel_getOrCreateRoom
-  methodBody: 	"return (Room) modelMap.computeIfAbsent(id, k -> new Room().setId(k));
+  methodBody: 	"if (id == null) return null;
+return (Room) modelMap.computeIfAbsent(id, k -> new Room().setId(k));
 "
   modified: 	false
   modifiers: 	public
@@ -100,7 +103,8 @@
   clazz: 	studyRightModel
   declaration: 	"public Stop getOrCreateStop(String id)"
   id: 	StudyRightModel_getOrCreateStop
-  methodBody: 	"return (Stop) modelMap.computeIfAbsent(id, k -> new Stop().setId(k));
+  methodBody: 	"if (id == null) return null;
+return (Stop) modelMap.computeIfAbsent(id, k -> new Stop().setId(k));
 "
   modified: 	false
   modifiers: 	public
@@ -283,7 +287,7 @@ if (\"rooms loaded 12:00\".equals(event)) {
    // create RoomsLoaded: rooms loaded 12:00
    RoomsLoaded e1200 = new RoomsLoaded();
    e1200.setId(\"12:00\");
-   publish(e1200);
+   apply(e1200);
 }
 
 
@@ -316,33 +320,9 @@ return html.toString();"
   clazz: 	studyRightService
   declaration: 	"private void handleRoomsLoaded(Event e)"
   id: 	StudyRightService_handleRoomsLoaded
-  methodBody: 	"RoomsLoaded event = (RoomsLoaded) e;
-if (event.getId().equals(\"12:00\")) {
-
-   University studyRight = model.getOrCreateUniversity(\"StudyRight\");
-
-   Room math = model.getOrCreateRoom(\"math\");
-   math.setCredits(\"23\");
-   math.setUni(model.getOrCreateUniversity(\"StudyRight\"));
-   math.withDoors(model.getOrCreateRoom(\"modeling\"), model.getOrCreateRoom(\"algebra\"));
-
-   Room modeling = model.getOrCreateRoom(\"modeling\");
-   modeling.setCredits(\"42\");
-   modeling.withDoors(model.getOrCreateRoom(\"math\"), model.getOrCreateRoom(\"algebra\"), model.getOrCreateRoom(\"exam\"));
-
-   Room algebra = model.getOrCreateRoom(\"algebra\");
-   algebra.setCredits(\"12\");
-
-   Room exam = model.getOrCreateRoom(\"exam\");
-   exam.setCredits(\"0\");
-   exam.setUni(model.getOrCreateUniversity(\"StudyRight\"));
-
-   TourStarted e1201 = new TourStarted();
-
-   e1201.setId(\"12:01\");
-   e1201.setEvent(\"tour started 12:01\");
-   publish(e1201);
-}
+  methodBody: 	"// no fulib
+RoomsLoaded event = (RoomsLoaded) e;
+handleDemoRoomsLoaded(event);
 "
   modified: 	false
   modifiers: 	private
@@ -351,17 +331,69 @@ if (event.getId().equals(\"12:00\")) {
   returnType: 	void
   signature: 	"class/StudyRightService/method/handleRoomsLoaded(Event)"
 
+- studyRightService_handleDemoRoomsLoaded: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"private void handleDemoRoomsLoaded(RoomsLoaded event)"
+  id: 	StudyRightService_handleDemoRoomsLoaded
+  methodBody: 	"if (event.getId().equals(\"12:00\")) {
+   UniversityEdited studyRightEvent = new UniversityEdited();
+   studyRightEvent.setId(\"12:00:00\");
+   studyRightEvent.setIncrement(\"StudyRight\");
+   studyRightEvent.setRooms(\"[math exam]\");
+   apply(studyRightEvent);
+
+   RoomEdited mathEvent = new RoomEdited();
+   mathEvent.setId(\"12:00:01\");
+   mathEvent.setIncrement(\"math\");
+   mathEvent.setCredits(\"23\");
+   mathEvent.setUni(\"StudyRight\");
+   mathEvent.setDoors(\"[modeling algebra]\");
+   apply(mathEvent);
+
+   RoomEdited modelingEvent = new RoomEdited();
+   modelingEvent.setId(\"12:00:02\");
+   modelingEvent.setIncrement(\"modeling\");
+   modelingEvent.setCredits(\"42\");
+   modelingEvent.setDoors(\"[math algebra exam]\");
+   apply(modelingEvent);
+
+   RoomEdited algebraEvent = new RoomEdited();
+   algebraEvent.setId(\"12:00:03\");
+   algebraEvent.setIncrement(\"algebra\");
+   algebraEvent.setCredits(\"12\");
+   apply(algebraEvent);
+
+   RoomEdited examEvent = new RoomEdited();
+   examEvent.setId(\"12:00:04\");
+   examEvent.setIncrement(\"exam\");
+   examEvent.setCredits(\"0\");
+   examEvent.setUni(\"StudyRight\");
+   apply(examEvent);
+
+
+   TourStarted e1201 = new TourStarted();
+
+   e1201.setId(\"12:01\");
+   e1201.setEvent(\"tour started 12:01\");
+   apply(e1201);
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleDemoRoomsLoaded
+  paramsString: 	"RoomsLoaded event"
+  returnType: 	void
+  signature: 	"class/StudyRightService/method/handleDemoRoomsLoaded(RoomsLoaded)"
+
 - studyRightService_handleTourStarted: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	studyRightService
   declaration: 	"private void handleTourStarted(Event e)"
   id: 	StudyRightService_handleTourStarted
-  methodBody: 	"TourStarted event = (TourStarted) e;
-if (event.getId().equals(\"12:01\")) {
-
-   Stop s01 = model.getOrCreateStop(\"s01\");
-   s01.setMotivation(\"77\");
-}
+  methodBody: 	"// no fulib
+TourStarted event = (TourStarted) e;
+handleDemoTourStarted(event);
 "
   modified: 	false
   modifiers: 	private
@@ -369,6 +401,156 @@ if (event.getId().equals(\"12:01\")) {
   paramsString: 	"Event e"
   returnType: 	void
   signature: 	"class/StudyRightService/method/handleTourStarted(Event)"
+
+- studyRightService_handleDemoTourStarted: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"private void handleDemoTourStarted(TourStarted event)"
+  id: 	StudyRightService_handleDemoTourStarted
+  methodBody: 	"if (event.getId().equals(\"12:01\")) {
+   StopEdited s01Event = new StopEdited();
+   s01Event.setId(\"12:01:01\");
+   s01Event.setIncrement(\"s01\");
+   s01Event.setMotivation(\"77\");
+   apply(s01Event);
+
+
+   RoomSelected e1202 = new RoomSelected();
+
+   e1202.setId(\"12:02\");
+   e1202.setEvent(\"room selected 12:02\");
+   e1202.setRoom(\"math\");
+   e1202.setPreviousStop(\"s01\");
+   apply(e1202);
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleDemoTourStarted
+  paramsString: 	"TourStarted event"
+  returnType: 	void
+  signature: 	"class/StudyRightService/method/handleDemoTourStarted(TourStarted)"
+
+- studyRightService_handleRoomSelected: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"private void handleRoomSelected(Event e)"
+  id: 	StudyRightService_handleRoomSelected
+  methodBody: 	"// no fulib
+RoomSelected event = (RoomSelected) e;
+handleDemoRoomSelected(event);
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleRoomSelected
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/StudyRightService/method/handleRoomSelected(Event)"
+
+- studyRightService_handleDemoRoomSelected: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"private void handleDemoRoomSelected(RoomSelected event)"
+  id: 	StudyRightService_handleDemoRoomSelected
+  methodBody: 	"if (event.getId().equals(\"12:02\")) {
+   StopEdited s02Event = new StopEdited();
+   s02Event.setId(\"12:02:01\");
+   s02Event.setIncrement(\"s02\");
+   s02Event.setRoom(\"math\");
+   s02Event.setMotivation(\"54\");
+   s02Event.setPreviousStop(\"s01\");
+   apply(s02Event);
+
+
+   RoomSelected e1203 = new RoomSelected();
+
+   e1203.setId(\"12:03\");
+   e1203.setEvent(\"room selected 12:03\");
+   e1203.setRoom(\"modeling\");
+   e1203.setPreviousStop(\"s02\");
+   apply(e1203);
+
+   RoomSelected e1204 = new RoomSelected();
+
+   e1204.setId(\"12:04\");
+   e1204.setEvent(\"room selected 12:04\");
+   e1204.setRoom(\"algebra\");
+   e1204.setPreviousStop(\"s02\");
+   apply(e1204);
+}
+if (event.getId().equals(\"12:03\")) {
+   StopEdited s03Event = new StopEdited();
+   s03Event.setId(\"12:03:01\");
+   s03Event.setIncrement(\"s03\");
+   s03Event.setRoom(\"modeling\");
+   s03Event.setPreviousStop(\"s02\");
+   s03Event.setMotivation(\"12\");
+   apply(s03Event);
+
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleDemoRoomSelected
+  paramsString: 	"RoomSelected event"
+  returnType: 	void
+  signature: 	"class/StudyRightService/method/handleDemoRoomSelected(RoomSelected)"
+
+- studyRightService_handleUniversityEdited: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"private void handleUniversityEdited(Event e)"
+  id: 	StudyRightService_handleUniversityEdited
+  methodBody: 	"UniversityEdited event = (UniversityEdited) e;
+University object = model.getOrCreateUniversity(event.getIncrement());
+for (String name : stripBrackets(event.getRooms()).split(\"\\s+\")) {
+   object.withRooms(model.getOrCreateRoom(name));
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleUniversityEdited
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/StudyRightService/method/handleUniversityEdited(Event)"
+
+- studyRightService_handleRoomEdited: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"private void handleRoomEdited(Event e)"
+  id: 	StudyRightService_handleRoomEdited
+  methodBody: 	"RoomEdited event = (RoomEdited) e;
+Room object = model.getOrCreateRoom(event.getIncrement());
+object.setCredits(event.getCredits());
+object.setUni(model.getOrCreateUniversity(event.getUni()));
+for (String name : stripBrackets(event.getDoors()).split(\"\\s+\")) {
+   object.withDoors(model.getOrCreateRoom(name));
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleRoomEdited
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/StudyRightService/method/handleRoomEdited(Event)"
+
+- studyRightService_handleStopEdited: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"private void handleStopEdited(Event e)"
+  id: 	StudyRightService_handleStopEdited
+  methodBody: 	"StopEdited event = (StopEdited) e;
+Stop object = model.getOrCreateStop(event.getIncrement());
+object.setMotivation(event.getMotivation());
+object.setRoom(event.getRoom());
+object.setPreviousStop(model.getOrCreateStop(event.getPreviousStop()));
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleStopEdited
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/StudyRightService/method/handleStopEdited(Event)"
 
 - studyRightService_initEventHandlerMap: 	org.fulib.classmodel.FMethod
   annotations: 	""
@@ -379,6 +561,10 @@ if (event.getId().equals(\"12:01\")) {
    handlerMap = new LinkedHashMap<>();
    handlerMap.put(RoomsLoaded.class, this::handleRoomsLoaded);
    handlerMap.put(TourStarted.class, this::handleTourStarted);
+   handlerMap.put(RoomSelected.class, this::handleRoomSelected);
+   handlerMap.put(UniversityEdited.class, this::handleUniversityEdited);
+   handlerMap.put(RoomEdited.class, this::handleRoomEdited);
+   handlerMap.put(StopEdited.class, this::handleStopEdited);
 }
 "
   modified: 	false
@@ -448,6 +634,27 @@ catch (UnirestException e) {
   paramsString: 	"Request req, Response res"
   returnType: 	String
   signature: 	"class/StudyRightService/method/postApply(Request,Response)"
+
+- studyRightService_stripBrackets: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightService
+  declaration: 	"public String stripBrackets(String back)"
+  id: 	StudyRightService_stripBrackets
+  methodBody: 	"      if (back == null) {
+         return \"\";
+      }
+      int open = back.indexOf('[');
+      int close = back.indexOf(']');
+      if (open >= 0 && close >= 0) {
+         back = back.substring(open + 1, close);
+      }
+      return back;"
+  modified: 	false
+  modifiers: 	public
+  name: 	stripBrackets
+  paramsString: 	"String back"
+  returnType: 	String
+  signature: 	"class/StudyRightService/method/stripBrackets(String)"
 
 - university_id: 	org.fulib.classmodel.Attribute
   clazz: 	university
@@ -527,4 +734,35 @@ catch (UnirestException e) {
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
+
+- stop_room: 	org.fulib.classmodel.Attribute
+  clazz: 	stop
+  id: 	Stop_room
+  modified: 	false
+  name: 	room
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- stop_previousStop: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	1
+  clazz: 	stop
+  id: 	Stop_previousStop
+  modified: 	false
+  name: 	previousStop
+  other: 	stop_nextStops
+  propertyStyle: 	Bean
+
+- stop_nextStops: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	42
+  clazz: 	stop
+  collectionType: 	c1
+  id: 	Stop_nextStops
+  modified: 	false
+  name: 	nextStops
+  other: 	stop_previousStop
+  propertyStyle: 	Bean
+  roleType: 	"java.util.ArrayList<%s>"
 
